Update negative weights TWFE

--- a/Panel.bib
+++ b/Panel.bib
@@ -1355,3 +1355,36 @@ quality preschool program based on High Scope's participatory learning approach 
 }
 
 
+@article{Sun.2021,
+  title = {Estimating Dynamic Treatment Effects in Event Studies with Heterogeneous Treatment Effects},
+  author = {Sun, Liyang and Abraham, Sarah},
+  year = {2021},
+  month = dec,
+  journal = {Journal of Econometrics},
+  volume = {225},
+  number = {2},
+  pages = {175--199},
+  issn = {03044076},
+  doi = {10.1016/j.jeconom.2020.09.006},
+  langid = {english},
+  file = {N\:\\Zotero\\Sun_Abraham_2021_Estimating dynamic treatment effects in event studies with heterogeneous.pdf}
+}
+
+
+@article{deChaisemartin.2020,
+  title = {Two-{{Way Fixed Effects Estimators}} with {{Heterogeneous Treatment Effects}}},
+  author = {{de Chaisemartin}, Cl{\'e}ment and D'Haultf{\oe}uille, Xavier},
+  year = {2020},
+  month = sep,
+  journal = {American Economic Review},
+  volume = {110},
+  number = {9},
+  pages = {2964--2996},
+  issn = {0002-8282},
+  doi = {10.1257/aer.20181169},
+  abstract = {Linear regressions with period and group fixed effects are widely used to estimate treatment effects. We show that they estimate weighted sums of the average treatment effects (ATE ) in each group and period, with weights that may be negative. Due to the negative weights, the linear regression coefficient may for instance be negative while all the ATEs are positive. We propose another estimator that solves this issue. In the two applications we revisit, it is significantly different from the linear regression estimator. (JEL C21, C23, D72, J31, J51, L82)},
+  langid = {english},
+  file = {N\:\\Zotero\\de Chaisemartin_D’Haultfœuille_2020_Two-Way Fixed Effects Estimators with Heterogeneous Treatment Effects.pdf}
+}
+
+
